--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,8 +7,7 @@ concurrency:
 on:
   pull_request:
     branches:
-      - develop
-    types: [synchronize, opened, reopened, ready_for_review]
+      - main
 
 jobs:
   test-deploy:
