--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Delete Old docker container
         run: sudo docker rm -f docusaurus-app || true
       - name: Run Docker Container
-        run: sudo docker run -d -p 80:80 docusaurus-app muneer1997/blog-site
+        run: sudo docker run -d -p 80:80 --name docusaurus-app muneer1997/blog-site
