--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 
 services:
   docusaurus:
+    container_name: muneer-app
     build:
       context: .
       dockerfile: Dockerfile
@@ -15,11 +16,18 @@ services:
   # Development service (optional)
   dev:
     image: node:18-alpine
-    command: npm start
+    command: sh -c "npm install && npm start"
     ports:
       - "3000:3000"
+      - "35729:35729"  # For live reload
     volumes:
       - .:/app
+      - node_modules:/app/node_modules  # Named volume for node_modules
     working_dir: /app
     environment:
       - NODE_ENV=development
+      - HOST=0.0.0.0  # Required for Docker
+    stdin_open: true  # For interactive processes
+    tty: true
+volumes:
+  node_modules:
