--- a/blog/tags.yml
+++ b/blog/tags.yml
@@ -3,10 +3,10 @@ facebook:
   permalink: /facebook
   description: Facebook tag description
 
-hello:
-  label: Hello
-  permalink: /hello
-  description: Hello tag description
+Symfony:
+  label: Symfony
+  permalink: /welcome
+  description: Symfony tag description
 
 docusaurus:
   label: Docusaurus
