--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,26 +8,26 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "80:80"
+      - "8000:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     restart: unless-stopped
 
   # Development service (optional)
-  dev:
-    image: node:18-alpine
-    command: sh -c "npm install && npm start"
-    ports:
-      - "3000:3000"
-      - "35729:35729"  # For live reload
-    volumes:
-      - .:/app
-      - node_modules:/app/node_modules  # Named volume for node_modules
-    working_dir: /app
-    environment:
-      - NODE_ENV=development
-      - HOST=0.0.0.0  # Required for Docker
-    stdin_open: true  # For interactive processes
-    tty: true
-volumes:
-  node_modules:
+#   dev:
+#     image: node:18-alpine
+#     command: sh -c "npm install && npm start"
+#     ports:
+#       - "3000:3000"
+#       - "35729:35729"  # For live reload
+#     volumes:
+#       - .:/app
+#       - node_modules:/app/node_modules  # Named volume for node_modules
+#     working_dir: /app
+#     environment:
+#       - NODE_ENV=development
+#       - HOST=0.0.0.0  # Required for Docker
+#     stdin_open: true  # For interactive processes
+#     tty: true
+# volumes:
+#   node_modules:
