feat: Add domain-driven-design.md blog post
This commit adds the "domain-driven-design.md" blog post, which explains how to design and implement a Product and Group relationship using the principles of Domain-Driven Design (DDD) in a Symfony application. The blog post provides an overview of key DDD concepts and implementation steps, along with example usage and the advantages of this design approach.

--- a/blog/tags.yml
+++ b/blog/tags.yml
@@ -13,7 +13,7 @@ docusaurus:
   permalink: /docusaurus
   description: Docusaurus tag description
 
-hola:
-  label: Hola
-  permalink: /hola
-  description: Hola tag description
+DDD:
+  label: Domain Driven Design
+  permalink: /domain-driven-design
+  description: Concept of domain driven design
